using duckdb instead of sqlite3

--- a/src/notebook/strategy.ipynb
+++ b/src/notebook/strategy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "[2000 rows x 12 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
        "243     1.102057e+06       0  19803.275333  19885.550833  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
        "[1761 rows x 15 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +943,7 @@
        "4     1.471429e+06       0  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
        "(1597, 16)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,12 +1274,8 @@
     "    m, n = X.shape\n",
     "    \n",
     "    dj_db, dj_dw = compute_gradient(X, y, w, b)\n",
-    "\n",
-    "    ### START CODE HERE ###     \n",
     "    dj_dw = dj_dw + np.dot(lambda_ / m, w)\n",
-    "        \n",
-    "    ### END CODE HERE ###         \n",
-    "        \n",
+    "    \n",
     "    return dj_db, dj_dw"
    ]
   },
@@ -1297,13 +1293,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_feature(X1, X2):\n",
     "    \"\"\"\n",
-    "    Feature mapping function to polynomial features\n",
+    "    Map features using polynomial with degree=8 \n",
     "    \"\"\"\n",
     "    X1 = np.atleast_1d(X1)\n",
     "    X2 = np.atleast_1d(X2)\n",
@@ -1317,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1334,7 @@
        "         3.19965000e-24,  2.67577366e-24,  2.23767121e-24]])"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1405,7 @@
        "       -0.34193722,  0.03096788, -0.42953207,  0.44485213])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1453,14 +1449,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4927/3679780729.py:2: RuntimeWarning: overflow encountered in exp\n",
+      "/tmp/ipykernel_5147/3679780729.py:2: RuntimeWarning: overflow encountered in exp\n",
       "  g = 1 / (1 + np.exp(np.negative(z)))\n"
      ]
     },
