Move all ML functions into utils.py

--- a/src/strategy.ipynb
+++ b/src/strategy.ipynb
@@ -272,7 +272,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data/btcusdt.csv\")\n",
+    "df = pd.read_csv(\"./data/btcusdt.csv\")\n",
     "df"
    ]
   },
@@ -949,7 +949,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data/btcusdt.csv\")\n",
+    "df = pd.read_csv(\"./data/btcusdt.csv\")\n",
     "df.head()"
    ]
   },
@@ -1043,24 +1043,6 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def z_scaler(data):\n",
-    "    \"\"\"\n",
-    "    Rescaling the data to reasonable interval\n",
-    "\n",
-    "    Arg:\n",
-    "     data:  ndarray (n,)\n",
-    "    \"\"\"\n",
-    "    mu = np.mean(data)\n",
-    "    stddev = np.sqrt(np.var(data))\n",
-    "    return (data - mu) / stddev"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1093,193 +1075,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sigmoid(z):\n",
-    "    g = 1 / (1 + np.exp(np.negative(z)))\n",
-    "    return g"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_cost(X, y, w, b):\n",
-    "    m, n = X.shape\n",
-    "    \n",
-    "    z = np.matmul(X,w) + b\n",
-    "    f_wb = sigmoid(z)\n",
-    "    # print(f_wb)\n",
-    "    total_cost = 0\n",
-    "\n",
-    "    for i in range(m):\n",
-    "        loss = -y[i] * math.log(f_wb[i]) - (1 - y[i]) * math.log(1 - f_wb[i])\n",
-    "        total_cost += np.sum(loss)\n",
-    "    \n",
-    "    total_cost /= m\n",
-    "\n",
-    "    return total_cost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_gradient(X, y, w, b, lambda_=None): \n",
-    "    \"\"\"\n",
-    "    Computes the gradient for logistic regression \n",
-    " \n",
-    "    Args:\n",
-    "      X : (ndarray Shape (m,n)) variable such as house size \n",
-    "      y : (array_like Shape (m,1)) actual value \n",
-    "      w : (array_like Shape (n,1)) values of parameters of the model      \n",
-    "      b : (scalar)                 value of parameter of the model \n",
-    "      lambda_: unused placeholder.\n",
-    "    Returns\n",
-    "      dj_dw: (array_like Shape (n,1)) The gradient of the cost w.r.t. the parameters w. \n",
-    "      dj_db: (scalar)                The gradient of the cost w.r.t. the parameter b. \n",
-    "    \"\"\"\n",
-    "    m, n = X.shape\n",
-    "    dj_dw = np.zeros(w.shape)\n",
-    "    dj_db = 0.\n",
-    "\n",
-    "    z = np.matmul(X,w) + b\n",
-    "    f_wb = sigmoid(z)\n",
-    "    dj_db = 1 / m * np.sum(f_wb - y)\n",
-    "    \n",
-    "    b_i = 0.\n",
-    "    dj_dw = np.dot(1/m, np.matmul(np.transpose(X), f_wb - y))\n",
-    "        \n",
-    "    return dj_db, dj_dw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gradient_descent(X, y, w_in, b_in, cost_function, gradient_function, alpha, num_iters, lambda_): \n",
-    "    \"\"\"\n",
-    "    Performs batch gradient descent to learn theta. Updates theta by taking \n",
-    "    num_iters gradient steps with learning rate alpha\n",
-    "    \n",
-    "    Args:\n",
-    "      X :    (array_like Shape (m, n)\n",
-    "      y :    (array_like Shape (m,))\n",
-    "      w_in : (array_like Shape (n,))  Initial values of parameters of the model\n",
-    "      b_in : (scalar)                 Initial value of parameter of the model\n",
-    "      cost_function:                  function to compute cost\n",
-    "      alpha : (float)                 Learning rate\n",
-    "      num_iters : (int)               number of iterations to run gradient descent\n",
-    "      lambda_ (scalar, float)         regularization constant\n",
-    "      \n",
-    "    Returns:\n",
-    "      w : (array_like Shape (n,)) Updated values of parameters of the model after\n",
-    "          running gradient descent\n",
-    "      b : (scalar)                Updated value of parameter of the model after\n",
-    "          running gradient descent\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # number of training examples\n",
-    "    m = len(X)\n",
-    "    \n",
-    "    # An array to store cost J and w's at each iteration primarily for graphing later\n",
-    "    J_history = []\n",
-    "    w_history = []\n",
-    "    \n",
-    "    for i in range(num_iters):\n",
-    "\n",
-    "        # Calculate the gradient and update the parameters\n",
-    "        dj_db, dj_dw = gradient_function(X, y, w_in, b_in, lambda_)   \n",
-    "\n",
-    "        # Update Parameters using w, b, alpha and gradient\n",
-    "        w_in = w_in - alpha * dj_dw               \n",
-    "        b_in = b_in - alpha * dj_db              \n",
-    "       \n",
-    "        # Save cost J at each iteration\n",
-    "        if i<100000:      # prevent resource exhaustion \n",
-    "            cost =  cost_function(X, y, w_in, b_in, lambda_)\n",
-    "            J_history.append(cost)\n",
-    "\n",
-    "        # Print cost every at intervals 10 times or as many iterations if < 10\n",
-    "        if i% math.ceil(num_iters/10) == 0 or i == (num_iters-1):\n",
-    "            w_history.append(w_in)\n",
-    "            print(f\"Iteration {i:4}: Cost {float(J_history[-1]):8.2f}   \")\n",
-    "        \n",
-    "    return w_in, b_in, J_history, w_history #return w and J,w history for graphing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_cost_reg(X, y, w, b, lambda_ = 1):\n",
-    "    \"\"\"\n",
-    "    Computes the cost over all examples\n",
-    "    Args:\n",
-    "      X : (array_like Shape (m,n)) data, m examples by n features\n",
-    "      y : (array_like Shape (m,)) target value \n",
-    "      w : (array_like Shape (n,)) Values of parameters of the model      \n",
-    "      b : (array_like Shape (n,)) Values of bias parameter of the model\n",
-    "      lambda_ : (scalar, float)    Controls amount of regularization\n",
-    "    Returns:\n",
-    "      total_cost: (scalar)         cost \n",
-    "    \"\"\"\n",
-    "\n",
-    "    m, n = X.shape\n",
-    "    \n",
-    "    # Calls the compute_cost function that you implemented above\n",
-    "    cost_without_reg = compute_cost(X, y, w, b)\n",
-    "\n",
-    "    reg_cost = 0.\n",
-    "    reg_cost = np.sum(np.square(w))\n",
-    "    \n",
-    "    # Add the regularization cost to get the total cost\n",
-    "    total_cost = cost_without_reg + (lambda_/(2 * m)) * reg_cost\n",
-    "\n",
-    "    return total_cost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_gradient_reg(X, y, w, b, lambda_ = 1): \n",
-    "    \"\"\"\n",
-    "    Computes the gradient for linear regression \n",
-    " \n",
-    "    Args:\n",
-    "      X : (ndarray Shape (m,n))   variable such as house size \n",
-    "      y : (ndarray Shape (m,))    actual value \n",
-    "      w : (ndarray Shape (n,))    values of parameters of the model      \n",
-    "      b : (scalar)                value of parameter of the model  \n",
-    "      lambda_ : (scalar,float)    regularization constant\n",
-    "    Returns\n",
-    "      dj_db: (scalar)             The gradient of the cost w.r.t. the parameter b. \n",
-    "      dj_dw: (ndarray Shape (n,)) The gradient of the cost w.r.t. the parameters w. \n",
-    "\n",
-    "    \"\"\"\n",
-    "    m, n = X.shape\n",
-    "    \n",
-    "    dj_db, dj_dw = compute_gradient(X, y, w, b)\n",
-    "    dj_dw = dj_dw + np.dot(lambda_ / m, w)\n",
-    "    \n",
-    "    return dj_db, dj_dw"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1293,27 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def map_feature(X1, X2):\n",
-    "    \"\"\"\n",
-    "    Map features using polynomial with degree=8 \n",
-    "    \"\"\"\n",
-    "    X1 = np.atleast_1d(X1)\n",
-    "    X2 = np.atleast_1d(X2)\n",
-    "    degree = 8\n",
-    "    out = []\n",
-    "    for i in range(1, degree+1):\n",
-    "        for j in range(i + 1):\n",
-    "            out.append((X1**(i-j) * (X2**j)))\n",
-    "    return np.stack(out, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1334,19 +1109,21 @@
        "         3.19965000e-24,  2.67577366e-24,  2.23767121e-24]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from utils import *\n",
+    "\n",
     "X_mapped = map_feature(train.lag_1, train.lag_2)\n",
     "X_mapped"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1182,7 @@
        "       -0.34193722,  0.03096788, -0.42953207,  0.44485213])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,47 +1193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_decision_boundary(ax, w, b, X, y):\n",
-    "    # Credit to dibgerge on Github for this plotting code\n",
-    "    \n",
-    "    if X.shape[1] <= 2:\n",
-    "        plot_x = np.array([min(X[:, 0]), max(X[:, 0])])\n",
-    "        plot_y = (-1. / w[1]) * (w[0] * plot_x + b)\n",
-    "        \n",
-    "        ax.plot(plot_x, plot_y, c=\"b\")\n",
-    "        \n",
-    "    else:\n",
-    "        u = np.linspace(-8, 8, 200)\n",
-    "        v = np.linspace(-8, 8, 200)\n",
-    "        \n",
-    "        z = np.zeros((len(u), len(v)))\n",
-    "\n",
-    "        # Evaluate z = theta*x over the grid\n",
-    "        for i in range(len(u)):\n",
-    "            for j in range(len(v)):\n",
-    "                z[i,j] = sigmoid(np.dot(map_feature(u[i], v[j]), w) + b)\n",
-    "        \n",
-    "        # important to transpose z before calling contour       \n",
-    "        z = z.T\n",
-    "        \n",
-    "        # Plot z = 0.5\n",
-    "        ax.contour(u,v,z, levels = [0.45], colors=\"g\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5147/3679780729.py:2: RuntimeWarning: overflow encountered in exp\n",
+      "/home/pehcy/projects/binoculars/src/utils.py:5: RuntimeWarning: overflow encountered in exp\n",
       "  g = 1 / (1 + np.exp(np.negative(z)))\n"
      ]
     },
