reorganize codes, testing RSI bot

--- a/src/notebook/strategy.ipynb
+++ b/src/notebook/strategy.ipynb
@@ -272,7 +272,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./data/btcusdt.csv\")\n",
+    "df = pd.read_csv(\"../data/btcusdt.csv\")\n",
     "df"
    ]
   },
@@ -949,7 +949,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./data/btcusdt.csv\")\n",
+    "df = pd.read_csv(\"../data/btcusdt.csv\")\n",
     "df.head()"
    ]
   },
@@ -1115,6 +1115,9 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "\n",
     "from utils import *\n",
     "\n",
     "X_mapped = map_feature(train.lag_1, train.lag_2)\n",
@@ -1164,6 +1167,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "once computed, the fitting parameters are"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -1200,7 +1210,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/pehcy/projects/binoculars/src/utils.py:5: RuntimeWarning: overflow encountered in exp\n",
+      "/home/pehcy/projects/binoculars/src/notebook/../utils.py:5: RuntimeWarning: overflow encountered in exp\n",
       "  g = 1 / (1 + np.exp(np.negative(z)))\n"
      ]
     },
