Enhanced MACD strategy

--- a/src/notebook/bot.ipynb
+++ b/src/notebook/bot.ipynb
@@ -618,24 +618,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0        0.000000\n",
-      "1       -0.948490\n",
-      "2       -3.202851\n",
-      "3       -8.219996\n",
-      "4      -11.615993\n",
-      "          ...    \n",
-      "1994    11.399185\n",
-      "1995    11.182208\n",
-      "1996    12.910192\n",
-      "1997    16.141516\n",
-      "1998    18.208434\n",
-      "Name: Close, Length: 1999, dtype: float64\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -656,9 +638,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Close</th>\n",
+       "      <th>macd</th>\n",
+       "      <th>signal</th>\n",
+       "      <th>hist</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -699,55 +681,55 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1994</th>\n",
-       "      <td>11.399185</td>\n",
-       "      <td>11.383808</td>\n",
-       "      <td>0.015377</td>\n",
+       "      <th>195</th>\n",
+       "      <td>-10.917432</td>\n",
+       "      <td>-8.466076</td>\n",
+       "      <td>-2.451356</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1995</th>\n",
-       "      <td>11.182208</td>\n",
-       "      <td>11.343488</td>\n",
-       "      <td>-0.161280</td>\n",
+       "      <th>196</th>\n",
+       "      <td>-13.202276</td>\n",
+       "      <td>-9.413316</td>\n",
+       "      <td>-3.788960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1996</th>\n",
-       "      <td>12.910192</td>\n",
-       "      <td>11.656829</td>\n",
-       "      <td>1.253363</td>\n",
+       "      <th>197</th>\n",
+       "      <td>-14.034649</td>\n",
+       "      <td>-10.337582</td>\n",
+       "      <td>-3.697067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1997</th>\n",
-       "      <td>16.141516</td>\n",
-       "      <td>12.553766</td>\n",
-       "      <td>3.587750</td>\n",
+       "      <th>198</th>\n",
+       "      <td>-13.753065</td>\n",
+       "      <td>-11.020679</td>\n",
+       "      <td>-2.732386</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1998</th>\n",
-       "      <td>18.208434</td>\n",
-       "      <td>13.684700</td>\n",
-       "      <td>4.523735</td>\n",
+       "      <th>199</th>\n",
+       "      <td>-13.132416</td>\n",
+       "      <td>-11.443026</td>\n",
+       "      <td>-1.689390</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1999 rows × 3 columns</p>\n",
+       "<p>200 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Close      Close     Close\n",
-       "0      0.000000   0.000000  0.000000\n",
-       "1     -0.948490  -0.189698 -0.758792\n",
-       "2     -3.202851  -0.792329 -2.410523\n",
-       "3     -8.219996  -2.277862 -5.942134\n",
-       "4    -11.615993  -4.145488 -7.470505\n",
-       "...         ...        ...       ...\n",
-       "1994  11.399185  11.383808  0.015377\n",
-       "1995  11.182208  11.343488 -0.161280\n",
-       "1996  12.910192  11.656829  1.253363\n",
-       "1997  16.141516  12.553766  3.587750\n",
-       "1998  18.208434  13.684700  4.523735\n",
+       "          macd     signal      hist\n",
+       "0     0.000000   0.000000  0.000000\n",
+       "1    -0.948490  -0.189698 -0.758792\n",
+       "2    -3.202851  -0.792329 -2.410523\n",
+       "3    -8.219996  -2.277862 -5.942134\n",
+       "4   -11.615993  -4.145488 -7.470505\n",
+       "..         ...        ...       ...\n",
+       "195 -10.917432  -8.466076 -2.451356\n",
+       "196 -13.202276  -9.413316 -3.788960\n",
+       "197 -14.034649 -10.337582 -3.697067\n",
+       "198 -13.753065 -11.020679 -2.732386\n",
+       "199 -13.132416 -11.443026 -1.689390\n",
        "\n",
-       "[1999 rows x 3 columns]"
+       "[200 rows x 3 columns]"
       ]
      },
      "execution_count": 8,
@@ -756,7 +738,34 @@
     }
    ],
    "source": [
-    "compute_macd(df['Close'], 26, 12, 9)"
+    "macd_tb = compute_macd(df['Close'].iloc[0:200], 26, 12, 9)\n",
+    "macd_tb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "buy price: [nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 20020.66, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19969.41, nan, nan, nan, nan, nan, nan, 19965.98, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19956.39, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19990.64, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19753.17, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan]\n",
+      "\n",
+      "sell price: [nan, 19981.67, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19983.93, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 20012.76, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19981.01, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 20009.39, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19782.07, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19766.25, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan]\n",
+      "\n",
+      "macd signal: [0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, -1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "close_prices = df['Close'].iloc[0:200]\n",
+    "buy_price, sell_price, macd_signal = macd_strategy(df['Close'].iloc[0:200], macd_tb)\n",
+    "print(f'buy price: {buy_price}\\n')\n",
+    "print(f'sell price: {sell_price}\\n')\n",
+    "print(f'macd signal: {macd_signal}\\n')"
    ]
   }
  ],
