--- a/src/notebook/bot.ipynb
+++ b/src/notebook/bot.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -407,157 +407,40 @@
        "      <td>0</td>\n",
        "      <td>-0.27</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1994</th>\n",
-       "      <td>2022-07-15 23:55:00</td>\n",
-       "      <td>20832.63</td>\n",
-       "      <td>20859.27</td>\n",
-       "      <td>20830.00</td>\n",
-       "      <td>20851.75</td>\n",
-       "      <td>56.11003</td>\n",
-       "      <td>1657900559999</td>\n",
-       "      <td>1.169761e+06</td>\n",
-       "      <td>2376</td>\n",
-       "      <td>30.95796</td>\n",
-       "      <td>6.453844e+05</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12.31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1995</th>\n",
-       "      <td>2022-07-15 23:56:00</td>\n",
-       "      <td>20851.75</td>\n",
-       "      <td>20854.06</td>\n",
-       "      <td>20830.30</td>\n",
-       "      <td>20839.44</td>\n",
-       "      <td>59.04577</td>\n",
-       "      <td>1657900619999</td>\n",
-       "      <td>1.230599e+06</td>\n",
-       "      <td>2489</td>\n",
-       "      <td>30.08875</td>\n",
-       "      <td>6.271038e+05</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25.39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1996</th>\n",
-       "      <td>2022-07-15 23:57:00</td>\n",
-       "      <td>20841.31</td>\n",
-       "      <td>20842.00</td>\n",
-       "      <td>20812.00</td>\n",
-       "      <td>20814.05</td>\n",
-       "      <td>56.00447</td>\n",
-       "      <td>1657900679999</td>\n",
-       "      <td>1.166369e+06</td>\n",
-       "      <td>2358</td>\n",
-       "      <td>24.57709</td>\n",
-       "      <td>5.118785e+05</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1997</th>\n",
-       "      <td>2022-07-15 23:58:00</td>\n",
-       "      <td>20814.05</td>\n",
-       "      <td>20817.98</td>\n",
-       "      <td>20783.89</td>\n",
-       "      <td>20788.67</td>\n",
-       "      <td>246.16047</td>\n",
-       "      <td>1657900739999</td>\n",
-       "      <td>5.119846e+06</td>\n",
-       "      <td>4757</td>\n",
-       "      <td>99.75851</td>\n",
-       "      <td>2.074993e+06</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-3.52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1998</th>\n",
-       "      <td>2022-07-15 23:59:00</td>\n",
-       "      <td>20785.52</td>\n",
-       "      <td>20803.22</td>\n",
-       "      <td>20777.00</td>\n",
-       "      <td>20792.19</td>\n",
-       "      <td>110.59637</td>\n",
-       "      <td>1657900799999</td>\n",
-       "      <td>2.299633e+06</td>\n",
-       "      <td>3442</td>\n",
-       "      <td>59.21621</td>\n",
-       "      <td>1.231400e+06</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19.25</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1999 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 Opentime      Open      High       Low     Close     Volume  \\\n",
-       "0     2022-07-14 14:42:00  19970.23  19976.38  19961.92  19969.78   54.23882   \n",
-       "1     2022-07-14 14:43:00  19969.78  19988.07  19966.83  19981.67   76.44766   \n",
-       "2     2022-07-14 14:44:00  19979.52  20001.43  19977.89  20000.75   76.81600   \n",
-       "3     2022-07-14 14:45:00  19998.08  20054.66  19998.07  20041.96  231.96826   \n",
-       "4     2022-07-14 14:46:00  20041.96  20064.88  20033.21  20036.43  138.45879   \n",
-       "...                   ...       ...       ...       ...       ...        ...   \n",
-       "1994  2022-07-15 23:55:00  20832.63  20859.27  20830.00  20851.75   56.11003   \n",
-       "1995  2022-07-15 23:56:00  20851.75  20854.06  20830.30  20839.44   59.04577   \n",
-       "1996  2022-07-15 23:57:00  20841.31  20842.00  20812.00  20814.05   56.00447   \n",
-       "1997  2022-07-15 23:58:00  20814.05  20817.98  20783.89  20788.67  246.16047   \n",
-       "1998  2022-07-15 23:59:00  20785.52  20803.22  20777.00  20792.19  110.59637   \n",
+       "              Opentime      Open      High       Low     Close     Volume  \\\n",
+       "0  2022-07-14 14:42:00  19970.23  19976.38  19961.92  19969.78   54.23882   \n",
+       "1  2022-07-14 14:43:00  19969.78  19988.07  19966.83  19981.67   76.44766   \n",
+       "2  2022-07-14 14:44:00  19979.52  20001.43  19977.89  20000.75   76.81600   \n",
+       "3  2022-07-14 14:45:00  19998.08  20054.66  19998.07  20041.96  231.96826   \n",
+       "4  2022-07-14 14:46:00  20041.96  20064.88  20033.21  20036.43  138.45879   \n",
        "\n",
-       "          Closetime  Quote asset volume  Number of trades  Taker by base  \\\n",
-       "0     1657780979999        1.083113e+06              2086       25.42902   \n",
-       "1     1657781039999        1.527254e+06              2569       42.97334   \n",
-       "2     1657781099999        1.535827e+06              2402       41.71792   \n",
-       "3     1657781159999        4.646698e+06              5870      142.64732   \n",
-       "4     1657781219999        2.775858e+06              3948       73.39213   \n",
-       "...             ...                 ...               ...            ...   \n",
-       "1994  1657900559999        1.169761e+06              2376       30.95796   \n",
-       "1995  1657900619999        1.230599e+06              2489       30.08875   \n",
-       "1996  1657900679999        1.166369e+06              2358       24.57709   \n",
-       "1997  1657900739999        5.119846e+06              4757       99.75851   \n",
-       "1998  1657900799999        2.299633e+06              3442       59.21621   \n",
+       "       Closetime  Quote asset volume  Number of trades  Taker by base  \\\n",
+       "0  1657780979999        1.083113e+06              2086       25.42902   \n",
+       "1  1657781039999        1.527254e+06              2569       42.97334   \n",
+       "2  1657781099999        1.535827e+06              2402       41.71792   \n",
+       "3  1657781159999        4.646698e+06              5870      142.64732   \n",
+       "4  1657781219999        2.775858e+06              3948       73.39213   \n",
        "\n",
-       "      Taker buy quote  Ignore  returns  \n",
-       "0        5.078110e+05       0   -11.89  \n",
-       "1        8.585345e+05       0   -19.08  \n",
-       "2        8.341394e+05       0   -41.21  \n",
-       "3        2.857418e+06       0     5.53  \n",
-       "4        1.471429e+06       0    -0.27  \n",
-       "...               ...     ...      ...  \n",
-       "1994     6.453844e+05       0    12.31  \n",
-       "1995     6.271038e+05       0    25.39  \n",
-       "1996     5.118785e+05       0    25.38  \n",
-       "1997     2.074993e+06       0    -3.52  \n",
-       "1998     1.231400e+06       0    19.25  \n",
-       "\n",
-       "[1999 rows x 13 columns]"
+       "   Taker buy quote  Ignore  returns  \n",
+       "0     5.078110e+05       0   -11.89  \n",
+       "1     8.585345e+05       0   -19.08  \n",
+       "2     8.341394e+05       0   -41.21  \n",
+       "3     2.857418e+06       0     5.53  \n",
+       "4     1.471429e+06       0    -0.27  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df.head()"
    ]
   },
   {
@@ -744,28 +627,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "buy price: [nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 20020.66, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19969.41, nan, nan, nan, nan, nan, nan, 19965.98, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19956.39, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19990.64, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19753.17, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan]\n",
-      "\n",
-      "sell price: [nan, 19981.67, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19983.93, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 20012.76, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19981.01, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 20009.39, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19782.07, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 19766.25, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan]\n",
-      "\n",
-      "macd signal: [0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, -1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "close_prices = df['Close'].iloc[0:200]\n",
-    "buy_price, sell_price, macd_signal = macd_strategy(df['Close'].iloc[0:200], macd_tb)\n",
-    "print(f'buy price: {buy_price}\\n')\n",
-    "print(f'sell price: {sell_price}\\n')\n",
-    "print(f'macd signal: {macd_signal}\\n')"
+    "buy_price, sell_price, macd_signal = macd_strategy(df['Close'].iloc[0:200], macd_tb)"
    ]
   }
  ],
